Fix tag text align

--- a/client/src/sass/components/_tag.scss
+++ b/client/src/sass/components/_tag.scss
@@ -8,7 +8,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: inline;
+  display: inline-flex;
 }
 
 .tag-shape-first {
